[project]
name = "arisu-visiter-record"
version = "1.1.1"
description = ""
authors = [
    {name = "2doo",email = "2doo@kakao.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyqt5-qt5 (==5.15.2)",
    "pyqt5 (==5.15.10)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
